[FE-19] Fix Scrollbar List Task

--- a/Frontend/src/components/Column/Column.scss
+++ b/Frontend/src/components/Column/Column.scss
@@ -5,13 +5,37 @@
   height: calc(100% - #{$gap});
   margin-left: 10px;
   margin-top: 10px;
-  min-height: 100vh;
   > * {
     //background-color: $list-bg-color;
     color: #333;
     padding:5px 8px;
   }
+  .list-task{
+    margin-top: 5px ;
+    max-height: 75vh;
+    overflow: auto;
+    /* width */
+    &::-webkit-scrollbar {
+      width: 10px;
+    }
 
+    /* Track */
+    &::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 5px grey;
+      border-radius: 10px;
+    }
+
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+      background: whitesmoke;
+      border-radius: 10px;
+    }
+
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+      background: #b30000;
+    }
+  }
   header {
     padding-left: 10px;
     height: $column-header-height;
@@ -39,22 +63,6 @@
       &:hover{
         color:#333;
       }
-    }
-  }
-  ul{
-    list-style-type        :none;
-    margin                 :0;
-    max-height             :calc(100% - #{$column-header-height} - #{$column-footer-height});
-    overflow-y             :auto;
-    &::-webkit-scrollbar{
-      -webkit-appearance: none;
-    }
-    &::-webkit-scrollbar:vertical{
-      width:11px;
-    }
-    &::-webkit-scrollbar-thumb{
-      background-color: darken($color:$list-bg-color,$amount:15px);
-      border-right: 5px solid $list-bg-color;
     }
   }
   .icon{
